k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-service
  namespace: calculator
spec:
  type: NodePort
  selector:
    app: calculator
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
